# allreduce-practice

allreduce-partitioning/: CMakeLists.txt
allreduce-partitioning/benchmarks/: ring_benchmark.cu  ring_benchmark_async.cu  ring_test_debug.cu  ring_test_multi.cu
allreduce-partitioning/include/: allreduce_ring.h  allreduce_ring_async.h
allreduce-partitioning/include/kernels/: elementwise_add.h
allreduce-partitioning/src/: allreduce_ring.cu  allreduce_ring_async.cu  allreduce_ring_debug.cu
allreduce-partitioning/src/kernels/: elementwise_add.cu
